{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 152,
  "lineage": "ba0a9e3b-f348-90bb-d3ea-43fc5abde3d7",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_az_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06dcc7691cd004d09",
            "arn": "arn:aws:ec2:us-west-1:246773437529:elastic-ip/eipalloc-06dcc7691cd004d09",
            "domain": "vpc",
            "id": "eipalloc-06dcc7691cd004d09",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-176-231-220.us-west-1.compute.amazonaws.com",
            "public_ip": "54.176.231.220",
            "public_ipv4_pool": "amazon",
            "region": "us-west-1",
            "tags": {
              "Name": "APCI-Jupiter-dev-eip-az-1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-dev-eip-az-1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_az_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebc5af0344737b01",
            "arn": "arn:aws:ec2:us-west-1:246773437529:elastic-ip/eipalloc-0ebc5af0344737b01",
            "domain": "vpc",
            "id": "eipalloc-0ebc5af0344737b01",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-13-56-17-43.us-west-1.compute.amazonaws.com",
            "public_ip": "13.56.17.43",
            "public_ipv4_pool": "amazon",
            "region": "us-west-1",
            "tags": {
              "Name": "APCI-Jupiter-dev-eip-az-1c",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-dev-eip-az-1c",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:246773437529:internet-gateway/igw-0b567ee4a83072e22",
            "id": "igw-0b567ee4a83072e22",
            "owner_id": "246773437529",
            "region": "us-west-1",
            "tags": {
              "Name": "APCI-Jupiter-dev-igw",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-dev-igw",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0e84e0e415290612f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "apci_jupiter_nat_gw_az_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06dcc7691cd004d09",
            "association_id": "eipassoc-02668bfbca8bb57a2",
            "connectivity_type": "public",
            "id": "nat-079026686678f9fd4",
            "network_interface_id": "eni-090c1c01776a4c990",
            "private_ip": "10.0.0.164",
            "public_ip": "54.176.231.220",
            "region": "us-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0058935eb9e967d64",
            "tags": {
              "Name": "APCI-Jupiter-dev-nat-gw-az-1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-dev-nat-gw-az-1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.eip_az_1a",
            "module.vpc.aws_subnet.apci_jupiter_public_subnet_az_1a",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "apci_jupiter_nat_gw_az_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebc5af0344737b01",
            "association_id": "eipassoc-070f6b1826178ffba",
            "connectivity_type": "public",
            "id": "nat-0d9a8415e791edbb8",
            "network_interface_id": "eni-055d5460fc2889ec6",
            "private_ip": "10.0.1.74",
            "public_ip": "13.56.17.43",
            "region": "us-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-099542b79e4d447e8",
            "tags": {
              "Name": "APCI-Jupiter-dev-nat-gw-az-1c",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-dev-nat-gw-az-1c",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.eip_az_1c",
            "module.vpc.aws_subnet.apci_jupiter_public_subnet_az_1c",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "apci_jupiter_private_rt_az_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:246773437529:route-table/rtb-03faec375ef20d5c2",
            "id": "rtb-03faec375ef20d5c2",
            "owner_id": "246773437529",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-079026686678f9fd4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "APCI-Jupiter-dev-private-rt_az-1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-dev-private-rt_az-1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e84e0e415290612f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.eip_az_1a",
            "module.vpc.aws_nat_gateway.apci_jupiter_nat_gw_az_1a",
            "module.vpc.aws_subnet.apci_jupiter_public_subnet_az_1a",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "apci_jupiter_private_rt_az_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:246773437529:route-table/rtb-07121b7e5a9c6fac6",
            "id": "rtb-07121b7e5a9c6fac6",
            "owner_id": "246773437529",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d9a8415e791edbb8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "APCI-Jupiter-dev-private-rt_az-1c",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-dev-private-rt_az-1c",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e84e0e415290612f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.eip_az_1c",
            "module.vpc.aws_nat_gateway.apci_jupiter_nat_gw_az_1c",
            "module.vpc.aws_subnet.apci_jupiter_public_subnet_az_1c",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "apci_jupiter_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:246773437529:route-table/rtb-0a08ddd28375e9537",
            "id": "rtb-0a08ddd28375e9537",
            "owner_id": "246773437529",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b567ee4a83072e22",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "APCI-Jupiter-dev-public-rt",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-dev-public-rt",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e84e0e415290612f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_subnet_az_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c45d00b6cf3215d",
            "region": "us-west-1",
            "route_table_id": "rtb-03faec375ef20d5c2",
            "subnet_id": "subnet-09635a5a2dd7ce0a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.eip_az_1a",
            "module.vpc.aws_nat_gateway.apci_jupiter_nat_gw_az_1a",
            "module.vpc.aws_route_table.apci_jupiter_private_rt_az_1a",
            "module.vpc.aws_subnet.apci_jupiter_db_subnet_az_1a",
            "module.vpc.aws_subnet.apci_jupiter_public_subnet_az_1a",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_subnet_az_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0711b47ff711262b6",
            "region": "us-west-1",
            "route_table_id": "rtb-07121b7e5a9c6fac6",
            "subnet_id": "subnet-0b46078c42354112b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.eip_az_1c",
            "module.vpc.aws_nat_gateway.apci_jupiter_nat_gw_az_1c",
            "module.vpc.aws_route_table.apci_jupiter_private_rt_az_1c",
            "module.vpc.aws_subnet.apci_jupiter_db_subnet_az_1c",
            "module.vpc.aws_subnet.apci_jupiter_public_subnet_az_1c",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077c43ad60f178473",
            "region": "us-west-1",
            "route_table_id": "rtb-03faec375ef20d5c2",
            "subnet_id": "subnet-007382b3ca83592b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.eip_az_1a",
            "module.vpc.aws_nat_gateway.apci_jupiter_nat_gw_az_1a",
            "module.vpc.aws_route_table.apci_jupiter_private_rt_az_1a",
            "module.vpc.aws_subnet.apci_jupiter_private_subnet_az_1a",
            "module.vpc.aws_subnet.apci_jupiter_public_subnet_az_1a",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0381122316b61d9c3",
            "region": "us-west-1",
            "route_table_id": "rtb-07121b7e5a9c6fac6",
            "subnet_id": "subnet-07e4162c42c1fb077"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.eip_az_1c",
            "module.vpc.aws_nat_gateway.apci_jupiter_nat_gw_az_1c",
            "module.vpc.aws_route_table.apci_jupiter_private_rt_az_1c",
            "module.vpc.aws_subnet.apci_jupiter_private_subnet_az_1c",
            "module.vpc.aws_subnet.apci_jupiter_public_subnet_az_1c",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce95c452fd348453",
            "region": "us-west-1",
            "route_table_id": "rtb-0a08ddd28375e9537",
            "subnet_id": "subnet-0058935eb9e967d64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.apci_jupiter_public_rt",
            "module.vpc.aws_subnet.apci_jupiter_public_subnet_az_1a",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b174c69e5ce7563f",
            "region": "us-west-1",
            "route_table_id": "rtb-0a08ddd28375e9537",
            "subnet_id": "subnet-099542b79e4d447e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.apci_jupiter_public_rt",
            "module.vpc.aws_subnet.apci_jupiter_public_subnet_az_1c",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "apci_jupiter_db_subnet_az_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:246773437529:subnet/subnet-09635a5a2dd7ce0a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09635a5a2dd7ce0a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "246773437529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "APCI-Jupiter-dev-db-subnet-az-1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-dev-db-subnet-az-1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0e84e0e415290612f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "246773437529",
            "id": "subnet-09635a5a2dd7ce0a0",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "apci_jupiter_db_subnet_az_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:246773437529:subnet/subnet-0b46078c42354112b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b46078c42354112b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "246773437529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "APCI-Jupiter-dev-db-subnet-az-1c",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-dev-db-subnet-az-1c",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0e84e0e415290612f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "246773437529",
            "id": "subnet-0b46078c42354112b",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "apci_jupiter_private_subnet_az_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:246773437529:subnet/subnet-007382b3ca83592b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007382b3ca83592b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "246773437529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "APCI-Jupiter-dev-private-subnet-az-1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-dev-private-subnet-az-1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0e84e0e415290612f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "246773437529",
            "id": "subnet-007382b3ca83592b1",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "apci_jupiter_private_subnet_az_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:246773437529:subnet/subnet-07e4162c42c1fb077",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e4162c42c1fb077",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "246773437529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "APCI-Jupiter-dev-private-subnet-az-1c",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-dev-private-subnet-az-1c",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0e84e0e415290612f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "246773437529",
            "id": "subnet-07e4162c42c1fb077",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "apci_jupiter_public_subnet_az_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:246773437529:subnet/subnet-0058935eb9e967d64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0058935eb9e967d64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "246773437529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "APCI-Jupiter-dev-public-subnet-az-1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-dev-public-subnet-az-1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0e84e0e415290612f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "246773437529",
            "id": "subnet-0058935eb9e967d64",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "apci_jupiter_public_subnet_az_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:246773437529:subnet/subnet-099542b79e4d447e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099542b79e4d447e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "246773437529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "APCI-Jupiter-dev-public-subnet-az-1c",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-dev-public-subnet-az-1c",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "vpc_id": "vpc-0e84e0e415290612f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "246773437529",
            "id": "subnet-099542b79e4d447e8",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:246773437529:vpc/vpc-0e84e0e415290612f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-094047c697afca4c1",
            "default_route_table_id": "rtb-065b59e80027ee4ec",
            "default_security_group_id": "sg-0550949afa41e7015",
            "dhcp_options_id": "dopt-0fab56169bbaf0e0d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e84e0e415290612f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-065b59e80027ee4ec",
            "owner_id": "246773437529",
            "region": "us-west-1",
            "tags": {
              "Name": "APCI-Jupiter-dev-main-vpc",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-dev-main-vpc",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-08-31T03:53:55Z",
              "environment": "dev",
              "project": "APCI"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}